--- a/.jfrog-pipelines/jira-integration/pipelines.yaml
+++ b/.jfrog-pipelines/jira-integration/pipelines.yaml
@@ -1,6 +1,14 @@
 pipelines:
   - name: jira_task_demo_pipeline
     configuration:
+      jfrogCliVersion: 2
+      runtime:
+        type: image
+        image:
+          custom:
+            name: releases-docker.jfrog.io/jfrog/pipelines-u18node
+            tag: "16"
+            autoPull: true
       integrations:
         - name: hk_jiraIntegration
         - name: hk_artifactory
